The plugin should now work for minecraft servers version 1.16 to 1.21. Tests needs to be done for each minecraft version. (Fixed) Need test