@@ -1,5 +1,8 @@
 package org.perseus.forcePlugin.managers;
 
+import com.destroystokyo.paper.profile.PlayerProfile;
+import com.destroystokyo.paper.profile.ProfileProperty;
+import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
@@ -10,13 +13,15 @@ import org.perseus.forcePlugin.abilities.Ability;
 import org.perseus.forcePlugin.data.ForceSide;
 import org.perseus.forcePlugin.data.ForceUser;
 
+import java.util.Arrays; // Import Arrays
 import java.util.List;
+import java.util.UUID;
 
 public class HolocronManager {
 
     private final ForcePlugin plugin;
-    private static final String JEDI_HOLOCRON_TEXTURE = "eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dXJlcy5taW5lY3JhZnQubmV0L3RleHR1cmUvYjA2OWM0NDk4YjdlNGU5MDI3NmZlZTI4Nzg2YmY1ZTliM2ZmOGIzOWQ2NjdkMzZhNjkyM2Q4ODBhNjI3YWI3NyJ9fX0=";
-    private static final String SITH_HOLOCRON_TEXTURE = "eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dXJlcy5taW5lY3JhZnQubmV0L3RleHR1cmUvM2E1NWIzYTllYjE4MzA4Yjk2YmVhNGExNzJmZDI4MTFmMmU2MGQwYTllOGE3MmZmODI4YzQ0OTkxMzNkZjc2NyJ9fX0=";
+    private static final String JEDI_HOLOCRON_TEXTURE = "eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dXJlcy5taW5lY3JhZnQubmV0L3RleHR1cmUvY2Y5YjY3YjVjMzY3Y2QxZDRiYjc0M2Y5ODQ3YmI1Mjc5OTY1MWU5N2FiZmYxYjE2YjM3YjQ0YmY0Zjc0YmY0In19fQ==";
+    private static final String SITH_HOLOCRON_TEXTURE = "eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dXJlcy5taW5lY3JhZnQubmV0L3RleHR1cmUvYmY3Y2M3Y2YxZTRhYmFkMWQyYTRlNmEwY2I0OThhZmMwODMyYmE1MGUxYmZlYjZmYjRjYjFkYjlmOTQ0YmU5NCJ9fX0=";
     public static final String HOLOCRON_IDENTIFIER = ChatColor.DARK_PURPLE + "Force Artifact";
 
     public HolocronManager(ForcePlugin plugin) {
@@ -35,16 +40,15 @@ public class HolocronManager {
     }
 
     private ItemStack createHolocronItem(ForceSide side) {
-        // --- THE FIX: Use the Version Adapter ---
-        // This single line now handles both 1.16 and 1.21 head creation.
-        String textureValue = (side == ForceSide.LIGHT) ? JEDI_HOLOCRON_TEXTURE : SITH_HOLOCRON_TEXTURE;
-        ItemStack head = plugin.getVersionAdapter().createCustomHead(textureValue, side);
-        // --- END FIX ---
+        ItemStack head = plugin.getVersionAdapter().createCustomHead(
+                (side == ForceSide.LIGHT) ? JEDI_HOLOCRON_TEXTURE : SITH_HOLOCRON_TEXTURE,
+                side
+        );
 
-        // We still need to set the lore, which is not version-specific.
         SkullMeta meta = (SkullMeta) head.getItemMeta();
         if (meta != null) {
-            meta.setLore(List.of(HOLOCRON_IDENTIFIER));
+            // --- THE FIX: Use Arrays.asList() instead of List.of() ---
+            meta.setLore(Arrays.asList(HOLOCRON_IDENTIFIER));
             head.setItemMeta(meta);
         }
         return head;
